<resources>
    <string name="app_name">누스</string>

    <string name="journals">업무 일지</string>
    <string name="setting">설정</string>
    <string name="write_journal">업무 일지 작성</string>
    <string name="journal_detail">업무 일지</string>
    <string name="news">채용 소식</string>

    <string name="bookmark">북마크</string>
    <string name="notification">알림</string>

    <string name="datetime_label">날짜</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>

    <string name="version">버전</string>
    <string name="terms_of_use">이용약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="open_source_license">오픈소스 라이선스</string>

    <string name="content_description_notification">알림</string>
    <string name="content_description_journals_fab">업무 일지 작성 버튼</string>
    <string name="content_description_delete_task">업무 삭제</string>
    <string name="content_description_calendar">달력</string>
    <string name="content_description_angle_right">오른쪽 화살표</string>

    <string name="dialog_date_picker_confirm">확인</string>
    <string name="dialog_date_picker_dismiss">취소</string>
    <string name="dialog_date_picker_title_journal">업무 일지 날짜</string>
</resources>