<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="vm"
      type="com.schopenhauer.nous.ui.setting.SettingViewModel" />
  </data>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fitsSystemWindows="true"
      app:liftOnScroll="false">

      <com.google.android.material.appbar.CollapsingToolbarLayout
        style="?attr/collapsingToolbarLayoutMediumStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
        app:collapsedTitleTextAppearance="@style/TextAppearance.Nous.TitleMedium"
        app:contentScrim="@color/md_theme_surface"
        app:expandedTitleTextAppearance="@style/TextAppearance.Nous.TitleLarge"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
        app:titleCollapseMode="scale">

        <com.google.android.material.appbar.MaterialToolbar
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:elevation="0dp"
          app:title="@string/setting" />
      </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:paddingHorizontal="16dp"
          android:paddingVertical="8dp">

          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/version"
            android:textAppearance="@style/TextAppearance.Nous.TitleMedium" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Nous.LabelLarge"
            tools:text="1.0.0" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
          android:layout_width="match_parent"
          android:layout_height="1dp" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:paddingHorizontal="16dp"
          android:paddingVertical="8dp">

          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notification"
            android:textAppearance="@style/TextAppearance.Nous.TitleMedium" />

          <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
          android:layout_width="match_parent"
          android:layout_height="1dp" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:paddingHorizontal="16dp"
          android:paddingVertical="8dp">

          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms_of_use"
            android:textAppearance="@style/TextAppearance.Nous.TitleMedium" />

          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_angle_right"
            android:src="@drawable/ic_angle_right_sm" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
          android:layout_width="match_parent"
          android:layout_height="1dp" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:paddingHorizontal="16dp"
          android:paddingVertical="8dp">

          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/privacy_policy"
            android:textAppearance="@style/TextAppearance.Nous.TitleMedium" />

          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_angle_right"
            android:src="@drawable/ic_angle_right_sm" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
          android:layout_width="match_parent"
          android:layout_height="1dp" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:paddingHorizontal="16dp"
          android:paddingVertical="8dp">

          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open_source_license"
            android:textAppearance="@style/TextAppearance.Nous.TitleMedium" />

          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_angle_right"
            android:src="@drawable/ic_angle_right_sm" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
          android:layout_width="match_parent"
          android:layout_height="1dp" />
      </LinearLayout>
    </ScrollView>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>